--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,10 +12,14 @@ Layout/EmptyLinesAroundBlockBody:
     - 'spec/**/**/*'
 Layout/EmptyLinesAroundClassBody:
   EnforcedStyle: empty_lines
+Layout/EmptyLinesAroundModuleBody:
+  EnforcedStyle: empty_lines
 Metrics/BlockLength:
   Exclude:
     - 'spec/**/**/*'
     - '*.gemspec'
+Naming/UncommunicativeMethodParamName:
+  Enabled: false
 Style/Documentation:
   Enabled: false
 Style/ExpandPathArguments:
