--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,7 +13,7 @@ Layout/EmptyLinesAroundBlockBody:
 Layout/EmptyLinesAroundClassBody:
   EnforcedStyle: empty_lines
 Layout/EmptyLinesAroundModuleBody:
-  EnforcedStyle: empty_lines
+  EnforcedStyle: empty_lines_except_namespace
 Metrics/BlockLength:
   Exclude:
     - 'spec/**/**/*'
