--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ install:
   - bundle install --jobs=3 --retry=3
 script:
   - bundle exec rspec
-  - bundle exec fasterer
+  # - bundle exec fasterer
