--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,5 @@ install:
   - bundle install --jobs=3 --retry=3
 script:
   - bundle exec rspec
+  - bundle exec rubocop
   # - bundle exec fasterer
