--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,7 +11,7 @@ Layout/EmptyLinesAroundBlockBody:
   Exclude:
     - 'spec/**/**/*'
 Layout/EmptyLinesAroundClassBody:
-  EnforcedStyle: empty_lines
+  EnforcedStyle: empty_lines_except_namespace
 Layout/EmptyLinesAroundModuleBody:
   EnforcedStyle: empty_lines_except_namespace
 Metrics/BlockLength:
