--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,19 +12,19 @@ Layout/EmptyLinesAroundClassBody:
   EnforcedStyle: empty_lines_except_namespace
 Layout/EmptyLinesAroundModuleBody:
   EnforcedStyle: empty_lines_except_namespace
+Layout/LineLength:
+  Max: 100
 Metrics/BlockLength:
   Exclude:
     - 'spec/**/**/*'
     - '*.gemspec'
-Metrics/LineLength:
-  Max: 100
 Metrics/ModuleLength:
   Enabled: false
 Naming/FileName:
   Enabled: false
 Naming/MemoizedInstanceVariableName:
   Enabled: false
-Naming/UncommunicativeMethodParamName:
+Naming/MethodParameterName:
   Enabled: false
 Style/AccessModifierDeclarations:
   Enabled: false
